# chalice-test

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.chalice/: config.json  custom_policy.json
.github/workflows/: test_auto_deploy.yml
