[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "s-kazuki", email = "ikki0006@gmail.com" }
]
dependencies = [
    "chalice>=1.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/src"]
